--- a/index.html
+++ b/index.html
@@ -52,20 +52,24 @@
         .btn-action { background: var(--secondary); color: white; border: none; padding: 14px; border-radius: 12px; font-weight: 700; width: 100%; cursor: pointer; margin-top: 10px; transition: 0.3s; }
         input { width: 100%; padding: 14px; margin: 10px 0; border-radius: 12px; border: 1px solid var(--border-color); background: var(--input-bg); color: var(--primary); box-sizing: border-box; }
 
-        /* Grid Selection */
+        /* Amount Selection Grid */
         .amt-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin: 15px 0; }
         .amt-btn { background: var(--card-bg); border: 1px solid var(--border-color); padding: 10px; border-radius: 10px; color: var(--primary); font-weight: 600; cursor: pointer; font-size: 13px; }
         .amt-btn:hover { background: var(--secondary); color: white; }
+
+        /* Investment Cards */
+        .inv-card { background: var(--card-bg); border-radius: 20px; padding: 18px; margin-bottom: 15px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 4px 6px rgba(0,0,0,0.02); border: 1px solid var(--border-color); }
 
         /* Mining Progress Card */
         .mining-status-card { background: var(--card-bg); border: 1px solid var(--border-color); border-radius: 18px; padding: 15px; margin-bottom: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.02); }
         .progress-container { background: var(--border-color); height: 8px; border-radius: 10px; margin: 12px 0; overflow: hidden; }
         .progress-bar { background: var(--secondary); height: 100%; border-radius: 10px; transition: 1s; width: 0%; }
 
-        /* Binance Display */
-        .method-display { background: #fffbeb; border: 2px dashed #f59e0b; padding: 20px; border-radius: 18px; margin-top: 20px; display: none; text-align: center; }
-        .binance-id-box { background: white; border: 1px solid #fde68a; padding: 12px; border-radius: 10px; display: flex; justify-content: space-between; align-items: center; margin: 15px 0; font-weight: bold; }
-
+        /* Profile Features */
+        .profile-card { background: linear-gradient(135deg, var(--secondary), #1d4ed8); color: white; margin: 20px; padding: 25px; border-radius: 24px; box-shadow: 0 10px 20px rgba(37, 99, 235, 0.3); position: relative; overflow: hidden; }
+        .profile-card::after { content: ''; position: absolute; top: -50%; right: -20%; width: 200px; height: 200px; background: rgba(255,255,255,0.1); border-radius: 50%; }
+        .trx-item { background: var(--card-bg); margin-bottom: 10px; padding: 15px; border-radius: 18px; display: flex; align-items: center; justify-content: space-between; border: 1px solid var(--border-color); }
+        
         /* Navigation */
         .nav-bar { position: fixed; bottom: 0; width: 100%; height: 75px; background: var(--card-bg); display: flex; justify-content: space-around; align-items: center; box-shadow: 0 -5px 15px rgba(0,0,0,0.05); z-index: 1000; }
         .nav-item { color: var(--text-muted); text-align: center; font-size: 11px; cursor: pointer; }
@@ -75,9 +79,10 @@
         .page.active { display: block; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* Profile Elements */
-        .profile-card { background: linear-gradient(135deg, var(--secondary), #1d4ed8); color: white; margin: 20px; padding: 25px; border-radius: 24px; position: relative; }
-        .trx-item { background: var(--card-bg); margin-bottom: 10px; padding: 15px; border-radius: 18px; display: flex; align-items: center; justify-content: space-between; border: 1px solid var(--border-color); }
+        /* Binance Display */
+        .method-display { background: #fffbeb; border: 2px dashed #f59e0b; padding: 20px; border-radius: 18px; margin-top: 20px; display: none; text-align: center; }
+        .binance-id-box { background: white; border: 1px solid #fde68a; padding: 12px; border-radius: 10px; display: flex; justify-content: space-between; align-items: center; margin: 15px 0; font-weight: bold; color: #b45309; }
+
         .modal-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.85); z-index: 20000; display: none; justify-content: center; align-items: center; backdrop-filter: blur(5px); }
         .popup-card { background: var(--card-bg); padding: 30px; border-radius: 28px; text-align: center; width: 85%; max-width: 340px; }
     </style>
@@ -90,7 +95,7 @@
     <div class="popup-card">
         <i class="fab fa-telegram" style="font-size: 60px; color: #0088cc; margin-bottom: 20px;"></i>
         <h3>Join Telegram Group</h3>
-        <p style="color:var(--text-muted); font-size:14px;">Withdraw Proof බැලීමට අපගේ සමූහයට එක්වන්න.</p>
+        <p style="color:var(--text-muted); font-size:14px;">දිනපතා Withdraw Proof බැලීමට අපගේ සමූහයට එක්වන්න.</p>
         <a href="https://t.me/Sky_Money_Money_Pro" target="_blank" style="text-decoration:none;"><button class="btn-action" style="background:#0088cc;">JOIN NOW</button></a>
         <button onclick="closePopup()" id="close-btn" style="margin-top:20px; border:none; background:none; color:var(--text-muted); display:none; width:100%; cursor:pointer;">CLOSE (5s)</button>
     </div>
@@ -99,12 +104,12 @@
 <div id="auth-screen">
     <div style="text-align:center; padding: 20px; width: 100%; min-height: 100vh; background: #0f172a; display: flex; align-items: center; justify-content: center;">
         <div style="background: white; padding: 35px; border-radius: 30px; width: 100%; max-width: 380px;">
-            <h2 style="color:#0f172a;">Sky Money <span style="color:var(--secondary);">Pro</span></h2>
+            <h2 style="color:#0f172a; font-family:'Poppins';">Sky Money <span style="color:var(--secondary);">Pro</span></h2>
             <div id="login-form">
                 <input type="email" id="l-email" placeholder="Email Address">
                 <input type="password" id="l-pass" placeholder="Password">
                 <button class="btn-action" onclick="login()">LOGIN</button>
-                <p onclick="toggleAuth(true)" style="font-size:12px; margin-top:20px; color:var(--secondary); cursor:pointer;">Create Account</p>
+                <p onclick="toggleAuth(true)" style="font-size:12px; margin-top:20px; color:var(--secondary); cursor:pointer; font-weight:600;">Create Account</p>
             </div>
             <div id="reg-form" style="display:none;">
                 <input type="email" id="r-email" placeholder="Email Address">
@@ -162,6 +167,7 @@
 
             <button class="btn-action" style="background:#f59e0b; margin-top:20px;" onclick="toggleMethod()">DEPOSIT METHOD</button>
             <div id="binance-method" class="method-display">
+                <img src="https://cryptologos.cc/logos/binance-coin-bnb-logo.png" width="40">
                 <h4 style="margin:10px 0;">Binance Pay ID</h4>
                 <div class="binance-id-box">
                     <span id="bin-id">12345678</span>
@@ -177,6 +183,8 @@
             <div class="amt-grid">
                 <button class="amt-btn" onclick="setAmt('w', 1000)">Rs. 1000</button>
                 <button class="amt-btn" onclick="setAmt('w', 2000)">Rs. 2000</button>
+                <button class="amt-btn" onclick="setAmt('w', 3000)">Rs. 3000</button>
+                <button class="amt-btn" onclick="setAmt('w', 4000)">Rs. 4000</button>
                 <button class="amt-btn" onclick="setAmt('w', 5000)">Rs. 5000</button>
             </div>
             <input type="number" id="w-amt" placeholder="Enter Amount">
@@ -187,13 +195,26 @@
 
     <section id="profile" class="page">
         <div class="profile-card">
-            <h2 id="u-email" style="margin:0; font-size:16px;">User Email</h2>
-            <div style="margin-top:15px; font-size:22px; font-weight:bold;">Rs. <span id="p-bal">0</span></div>
-            <div style="font-size:12px; opacity:0.8; margin-top:5px;">Code: <span id="u-ref-code">---</span></div>
+            <div style="display:flex; align-items:center;">
+                <div style="width:55px; height:55px; background:rgba(255,255,255,0.2); border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:24px;"><i class="fas fa-user"></i></div>
+                <div style="margin-left:15px;"><h2 id="u-email" style="margin:0; font-size:16px;">User Email</h2><small style="opacity:0.8;">Verified Member</small></div>
+            </div>
+            <div style="display:grid; grid-template-columns:1fr 1fr; margin-top:25px; border-top:1px solid rgba(255,255,255,0.1); padding-top:15px;">
+                <div><small style="opacity:0.8;">Balance</small><div style="font-size:20px; font-weight:bold;">Rs. <span id="p-bal">0</span></div></div>
+                <div style="text-align:right;"><small style="opacity:0.8;">Referral Code</small><div id="u-ref-code" style="font-weight:bold;">---</div></div>
+            </div>
         </div>
+
+        <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; padding: 0 20px 20px; text-align: center;">
+            <div style="background:var(--card-bg); padding:15px 5px; border-radius:15px; box-shadow:0 4px 6px rgba(0,0,0,0.02);" onclick="nav('deposit')"><i class="fas fa-plus-circle" style="color:var(--secondary)"></i><br><small>Deposit</small></div>
+            <div style="background:var(--card-bg); padding:15px 5px; border-radius:15px; box-shadow:0 4px 6px rgba(0,0,0,0.02);" onclick="nav('withdraw')"><i class="fas fa-wallet" style="color:#10b981"></i><br><small>Withdraw</small></div>
+            <div style="background:var(--card-bg); padding:15px 5px; border-radius:15px; box-shadow:0 4px 6px rgba(0,0,0,0.02);" onclick="nav('market')"><i class="fas fa-rocket" style="color:#8b5cf6"></i><br><small>Upgrade</small></div>
+            <div style="background:var(--card-bg); padding:15px 5px; border-radius:15px; box-shadow:0 4px 6px rgba(0,0,0,0.02);" onclick="window.open('https://t.me/Sky_Money_Money_Pro')"><i class="fab fa-telegram" style="color:#0088cc"></i><br><small>Group</small></div>
+        </div>
+
         <h3 style="padding:0 20px; font-size:16px;">Transaction History</h3>
         <div id="trans-history" style="padding:0 20px;"></div>
-        <div style="padding:20px;"><button class="btn-action" style="background:#ef4444;" onclick="logout()">LOGOUT</button></div>
+        <div style="padding:20px;"><button class="btn-action" style="background:#ef4444;" onclick="logout()">LOGOUT ACCOUNT</button></div>
     </section>
 
     <nav class="nav-bar">
@@ -252,7 +273,7 @@
         document.getElementById('u-email').innerText = userData.email;
         document.getElementById('u-ref-code').innerText = userData.refCode;
 
-        // Mining Display (Home Page)
+        // Mining Progress
         document.getElementById('mining-status-area').innerHTML = userData.activePlans.map(p => {
             const days = Math.floor((now - p.startTime) / 86400000);
             const progress = (Math.min(days, 30) / 30) * 100;
@@ -262,21 +283,32 @@
                 <div class="progress-container"><div class="progress-bar" style="width:${progress}%"></div></div>
                 <small>Earned: Rs. ${Math.min(days, 30) * p.daily} | Days: ${Math.min(days, 30)}/30</small>
             </div>`;
-        }).join('') || '<p style="font-size:12px;">No active mining.</p>';
+        }).join('') || '<p style="font-size:12px; color:var(--text-muted);">No active mining.</p>';
 
-        // Market Plans
+        // Market Plans (All 10 Plans)
         const plans = [
             { name: 'Plan 1', cost: 500, daily: 10, color: '#f59e0b' },
             { name: 'Plan 2', cost: 1000, daily: 25, color: '#10b981' },
+            { name: 'Plan 3', cost: 1500, daily: 45, color: '#8b5cf6' },
+            { name: 'Plan 4', cost: 2000, daily: 70, color: '#3b82f6' },
+            { name: 'Plan 5', cost: 2500, daily: 100, color: '#ec4899' },
+            { name: 'Plan 6', cost: 3000, daily: 135, color: '#6366f1' },
+            { name: 'Plan 7', cost: 3500, daily: 175, color: '#14b8a6' },
+            { name: 'Plan 8', cost: 4000, daily: 220, color: '#f43f5e' },
+            { name: 'Plan 9', cost: 4500, daily: 270, color: '#06b6d4' },
             { name: 'Plan 10', cost: 5000, daily: 330, color: '#a855f7' }
         ];
-        document.getElementById('market-list').innerHTML = plans.map(p => `<div style="display:flex; justify-content:space-between; align-items:center; background:white; padding:15px; margin-bottom:10px; border-radius:15px; border-left:5px solid ${p.color};"><div><b>${p.name}</b><br><small>Rs. ${p.cost}</small></div><button onclick="buyPlan(${p.cost}, ${p.daily}, '${p.name}')" class="btn-action" style="width:auto; padding:8px 15px; background:${p.color}">Invest</button></div>`).join('');
+        document.getElementById('market-list').innerHTML = plans.map(p => `
+            <div class="inv-card" style="border-left: 5px solid ${p.color}">
+                <div><b>${p.name}</b><br><small>Cost: Rs. ${p.cost}</small><br><small style="color:var(--success)">Daily: Rs. ${p.daily}</small></div>
+                <button onclick="buyPlan(${p.cost}, ${p.daily}, '${p.name}')" class="btn-action" style="width:auto; padding:8px 15px; background:${p.color}">Invest</button>
+            </div>`).join('');
 
-        // Transactions (Profile Page)
+        // Transactions
         document.getElementById('trans-history').innerHTML = userData.requests.map(r => `
             <div class="trx-item">
                 <div><b>${r.type.toUpperCase()}</b><br><small>${new Date(r.time).toLocaleDateString()}</small></div>
-                <div>Rs. ${r.amount} <br><small>${r.status}</small></div>
+                <div style="text-align:right;">Rs. ${r.amount} <br><small style="font-weight:bold; color:var(--secondary)">${r.status}</small></div>
             </div>`).reverse().join('');
         
         if(userData.bonusClaimed) document.getElementById('bonus-btn').style.opacity = "0.5";
@@ -288,13 +320,13 @@
         try { const res = await createUserWithEmailAndPassword(auth, e, p); await setDoc(doc(db, "users", res.user.uid), { email: e, bal: 0, refCode: "SKY"+Math.floor(1000+Math.random()*9000), activePlans: [], requests: [], bonusClaimed: false, isBanned: false }); } catch(err) { alert(err.message); }
     };
     window.logout = () => signOut(auth).then(() => location.reload());
-    window.buyPlan = async (cost, daily, name) => { if(userData.bal < cost) return alert("Low balance"); await updateDoc(doc(db, "users", auth.currentUser.uid), { bal: userData.bal - cost, activePlans: arrayUnion({ name, daily, startTime: Date.now() }) }); alert("Success!"); };
+    window.buyPlan = async (cost, daily, name) => { if(userData.bal < cost) return alert("Insufficient balance"); await updateDoc(doc(db, "users", auth.currentUser.uid), { bal: userData.bal - cost, activePlans: arrayUnion({ name, daily, startTime: Date.now() }) }); alert("Investment Success!"); };
     window.submitReq = async (type) => {
         const amt = parseInt(document.getElementById(type === 'deposit' ? 'd-amt' : 'w-amt').value);
         const details = document.getElementById(type === 'deposit' ? 'd-txid' : 'w-details').value;
-        if(!amt || !details) return alert("Fill all info");
+        if(!amt || !details) return alert("Fill all details");
         let up = { requests: arrayUnion({ type, amount: amt, status: 'pending', payID: details, time: Date.now() }) };
-        if(type === 'withdraw') { if(userData.bal < amt) return alert("Low balance"); up.bal = userData.bal - amt; }
+        if(type === 'withdraw') { if(userData.bal < amt) return alert("Insufficient balance"); up.bal = userData.bal - amt; }
         await updateDoc(doc(db, "users", auth.currentUser.uid), up); alert("Submitted!");
     };
     window.getDailyBonus = async () => { if(!userData.bonusClaimed) await updateDoc(doc(db, "users", auth.currentUser.uid), { bal: userData.bal + 200, bonusClaimed: true }); };
